--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </header>
     <main class="z-0 w-10/12 md:w-[678px]">
       <div
+        id="accordion"
         class="z-10 mx-auto flex -translate-y-20 flex-col gap-5 rounded-md bg-white p-6 md:-translate-y-24"
       >
         <div class="flex items-center gap-5">
@@ -50,74 +51,103 @@
           <h1>FAQs</h1>
         </div>
         <!-- One-start -->
-        <div class="flex flex-col gap-3">
-          <button class="accordion-button flex items-center justify-between">
-            <h3 id="1" class="accordion-title hover:text-hover-purple">
+        <section class="flex flex-col gap-3">
+          <button
+            id="accordion-control-1"
+            aria-controls="content-1"
+            aria-expanded="true"
+            title="Show content"
+            class="accordion-button flex items-center justify-between"
+          >
+            <h2 id="content-1" class="accordion-title">
               What is Frontend Mentor, and how will it help me?
-            </h3>
-            <span id="1" class="accordion-svg open"></span>
+            </h2>
+            <span id="content-1" class="accordion-svg open"></span>
           </button>
-          <p id="1" class="accordion-text">
-            Frontend Mentor offers realistic coding challenges to help
-            developers improve their frontend coding skills with projects in
-            HTML, CSS and JavaScript. It's suitable for all levels and ideal for
-            portfolio building.
-          </p>
+          <div id="content-1" aria-hidden="false" class="accordion-text">
+            <p>
+              Frontend Mentor offers realistic coding challenges to help
+              developers improve their frontend coding skills with projects in
+              HTML, CSS and JavaScript. It's suitable for all levels and ideal
+              for portfolio building.
+            </p>
+          </div>
           <hr />
-        </div>
+        </section>
         <!-- One-end -->
 
         <!-- Second-start -->
-        <div class="flex flex-col gap-3">
-          <button class="accordion-button flex items-center justify-between">
-            <h3 id="2" class="accordion-title hover:text-hover-purple">
+        <section class="flex flex-col gap-3">
+          <button
+            id="accordion-control-2"
+            aria-controls="content-2"
+            aria-expanded="false"
+            title="Show content"
+            class="accordion-button flex items-center justify-between"
+          >
+            <h2 id="content-2" class="accordion-title">
               Is Frontend Mentor free?
-            </h3>
-            <span id="2" class="accordion-svg"> </span>
+            </h2>
+            <span id="content-2" class="accordion-svg"> </span>
           </button>
-          <p id="2" class="accordion-text hidden">
-            Yes, Frontend Mentor offers both free and premium coding challenges,
-            with the free option providing access to a range of projects
-            suitable for all skill levels.
-          </p>
+          <div id="content-2" aria-hidden="true" class="accordion-text hidden">
+            <p>
+              Yes, Frontend Mentor offers both free and premium coding
+              challenges, with the free option providing access to a range of
+              projects suitable for all skill levels.
+            </p>
+          </div>
           <hr />
-        </div>
+        </section>
         <!-- Second-end -->
 
         <!-- Third-start -->
-        <div class="flex flex-col gap-3">
-          <button class="accordion-button flex items-center justify-between">
-            <h3 id="3" class="accordion-title hover:text-hover-purple">
+        <section class="flex flex-col gap-3">
+          <button
+            id="accordion-control-3"
+            aria-controls="content-3"
+            aria-expanded="false"
+            title="Show content"
+            class="accordion-button flex items-center justify-between"
+          >
+            <h2 id="content-3" class="accordion-title">
               Can I use Frontend Mentor projects in my portfolio?
-            </h3>
-            <span id="3" class="accordion-svg"></span>
+            </h2>
+            <span id="content-3" class="accordion-svg"></span>
           </button>
-          <p id="3" class="accordion-text hidden">
-            Yes, you can use projects completed on Frontend Mentor in your
-            portfolio. It's an excellent way to showcase your skills to
-            potential employers!
-          </p>
+          <div id="content-3" aria-hidden="true" class="accordion-text hidden">
+            <p>
+              Yes, you can use projects completed on Frontend Mentor in your
+              portfolio. It's an excellent way to showcase your skills to
+              potential employers!
+            </p>
+          </div>
           <hr />
-        </div>
+        </section>
         <!-- Third-end -->
 
         <!-- Fourth-start -->
-        <div class="flex flex-col gap-3">
+        <section class="flex flex-col gap-3">
           <button
-            id="4"
+            id="accordion-control-4"
+            aria-controls="content-4"
+            aria-expanded="false"
+            title="Show content"
             class="accordion-button flex items-center justify-between"
           >
-            <h3 id="4" class="accordion-title hover:text-hover-purple">
+            <h2 id="content-4" class="accordion-title">
               How can I get help if I'm stuck on a challenge?
-            </h3>
-            <span id="4" class="accordion-svg"></span>
+            </h2>
+            <span id="content-4" class="accordion-svg"></span>
           </button>
-          <p id="4" class="accordion-text hidden">
-            The best place to get help is inside Frontend Mentor's Discord
-            community. There's a help channel where you can ask questions and
-            seek support from other community members.
-          </p>
-        </div>
+          <div id="content-4" aria-hidden="true" class="accordion-text hidden">
+            <p>
+              The best place to get help is inside Frontend Mentor's Discord
+              community. There's a help channel where you can ask questions and
+              seek support from other community members.
+            </p>
+          </div>
+        </section>
         <!-- Fourth-end -->
       </div>
     </main>
