added meta desc

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="FAQ accordion - Frontend mentor challenge"
+    />
+    <meta name="keywords" content="HTML, CSS, TypeScript" />
+    <meta name="author" content="nemanjap16" />
     <link
       rel="icon"
       type="image/svg+xml"
