--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
     />
     <meta name="keywords" content="HTML, CSS, TypeScript" />
     <meta name="author" content="nemanjap16" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="./assets/images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="@img/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ</title>
   </head>
