--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </h2>
             <span id="content-2" class="accordion-svg"> </span>
           </button>
-          <div id="content-2" aria-hidden="true" class="accordion-text hidden">
+          <div id="content-2" aria-hidden="true" class="accordion-text">
             <p>
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
@@ -121,7 +121,7 @@
             </h2>
             <span id="content-3" class="accordion-svg"></span>
           </button>
-          <div id="content-3" aria-hidden="true" class="accordion-text hidden">
+          <div id="content-3" aria-hidden="true" class="accordion-text">
             <p>
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
@@ -146,7 +146,7 @@
             </h2>
             <span id="content-4" class="accordion-svg"></span>
           </button>
-          <div id="content-4" aria-hidden="true" class="accordion-text hidden">
+          <div id="content-4" aria-hidden="true" class="accordion-text">
             <p>
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
