--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             title="Show content"
             class="accordion-button flex items-center justify-between"
           >
-            <h2 id="content-1" class="accordion-title">
+            <span data-id="content-1" class="accordion-title">
               What is Frontend Mentor, and how will it help me?
-            </h2>
-            <span id="content-1" class="accordion-svg open"></span>
+            </span>
+            <span data-id="content-1" class="accordion-svg open"></span>
           </button>
-          <div id="content-1" aria-hidden="false" class="accordion-text">
+          <div data-id="content-1" aria-hidden="false" class="accordion-text">
             <p>
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
@@ -91,12 +91,12 @@
             title="Show content"
             class="accordion-button flex items-center justify-between"
           >
-            <h2 id="content-2" class="accordion-title">
+            <span data-id="content-2" class="accordion-title">
               Is Frontend Mentor free?
-            </h2>
-            <span id="content-2" class="accordion-svg"> </span>
+            </span>
+            <span data-id="content-2" class="accordion-svg"> </span>
           </button>
-          <div id="content-2" aria-hidden="true" class="accordion-text">
+          <div data-id="content-2" aria-hidden="true" class="accordion-text">
             <p>
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
@@ -116,12 +116,12 @@
             title="Show content"
             class="accordion-button flex items-center justify-between"
           >
-            <h2 id="content-3" class="accordion-title">
+            <span data-id="content-3" class="accordion-title">
               Can I use Frontend Mentor projects in my portfolio?
-            </h2>
-            <span id="content-3" class="accordion-svg"></span>
+            </span>
+            <span data-id="content-3" class="accordion-svg"></span>
           </button>
-          <div id="content-3" aria-hidden="true" class="accordion-text">
+          <div data-id="content-3" aria-hidden="true" class="accordion-text">
             <p>
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
@@ -141,12 +141,12 @@
             title="Show content"
             class="accordion-button flex items-center justify-between"
           >
-            <h2 id="content-4" class="accordion-title">
+            <span data-id="content-4" class="accordion-title">
               How can I get help if I'm stuck on a challenge?
-            </h2>
-            <span id="content-4" class="accordion-svg"></span>
+            </span>
+            <span data-id="content-4" class="accordion-svg"></span>
           </button>
-          <div id="content-4" aria-hidden="true" class="accordion-text">
+          <div data-id="content-4" aria-hidden="true" class="accordion-text">
             <p>
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
