--- a/index.html
+++ b/index.html
@@ -70,7 +70,12 @@
             </span>
             <span data-id="content-1" class="accordion-svg open"></span>
           </button>
-          <div data-id="content-1" aria-hidden="false" class="accordion-text">
+          <div
+            id="content-1"
+            data-id="content-1"
+            aria-hidden="false"
+            class="accordion-text"
+          >
             <p>
               Frontend Mentor offers realistic coding challenges to help
               developers improve their frontend coding skills with projects in
@@ -96,7 +101,12 @@
             </span>
             <span data-id="content-2" class="accordion-svg"> </span>
           </button>
-          <div data-id="content-2" aria-hidden="true" class="accordion-text">
+          <div
+            id="content-2"
+            data-id="content-2"
+            aria-hidden="true"
+            class="accordion-text"
+          >
             <p>
               Yes, Frontend Mentor offers both free and premium coding
               challenges, with the free option providing access to a range of
@@ -121,7 +131,12 @@
             </span>
             <span data-id="content-3" class="accordion-svg"></span>
           </button>
-          <div data-id="content-3" aria-hidden="true" class="accordion-text">
+          <div
+            id="content-3"
+            data-id="content-3"
+            aria-hidden="true"
+            class="accordion-text"
+          >
             <p>
               Yes, you can use projects completed on Frontend Mentor in your
               portfolio. It's an excellent way to showcase your skills to
@@ -146,7 +161,12 @@
             </span>
             <span data-id="content-4" class="accordion-svg"></span>
           </button>
-          <div data-id="content-4" aria-hidden="true" class="accordion-text">
+          <div
+            id="content-4"
+            data-id="content-4"
+            aria-hidden="true"
+            class="accordion-text"
+          >
             <p>
               The best place to get help is inside Frontend Mentor's Discord
               community. There's a help channel where you can ask questions and
