--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="FAQ accordion - Frontend mentor challenge"
     />
     <meta name="keywords" content="HTML, CSS, TypeScript" />
-    <meta name="author" content="nemanjap16" />
+    <meta name="author" content="Nemanja Pantelic" />
     <link
       rel="icon"
       type="image/svg+xml"
